# OM_System

./: .gitignore  README.md  constants.py  download_benchmark.sh  pyproject.toml
samples/: sample1.txt  sample1_base.txt  sample1_label.txt  sample1_natural.txt  sample2.txt  sample2_base.txt  sample2_label.txt  sample2_natural.txt
stage/: config.yaml  model_registry.py  pipeline.py
stage/candidate_generation/: build_embedding_model.py  candidate_generation.py  embedding_model.py  embedding_model_llamacpp.py  embedding_model_ollama.py  embedding_model_transformers.py
stage/evaluation/: complex_evaluate.py  edoal_parser.py  evaluation.py  tree_similarity.py
stage/matching/: build_llm_model.py  llm_model.py  llm_model_llamacpp.py  llm_model_ollama.py  llm_model_vllm.py  matching.py  prompt_generator.py  prompt_generator_ollama.py  prompt_generator_transformers.py
stage/modularization/: bfs_expander.py  modularizer.py  pagerank.py
stage/postprocessing/: answer_extractor.py  postprocessing.py  xml_parser_refinement.py
stage/preprocessing/: networkx_parser.py  ontology_pair.py  ontology_parser.py  preprocessing.py  rdflib_to_networkx.py
stage/verbalization/: base_verbalizer.py  build_verbalizer.py  label_verbalizer.py  natural_verbalizer.py  text_string_verbalizer.py  verbalizer_decorator.py
tests/: test_pipeline.py
tests/stage/: test_candidate_generation.py  test_evaluation.py  test_matching.py  test_postprocessing.py  test_preprocessing.py
tests/stage/candidate_generation/: test_embedding_model.py
tests/stage/matching/: test_build_llm_model.py  (+3 more)
(+11 files in other folders)
