[project]
name = "om-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "hydra-core>=1.3.2",
    "llama-cpp-python>=0.3.22",
    "lxml>=6.1.0",
    "mlflow>=3.12.0",
    "networkx>=3.4.2",
    "pytest",
    "rdflib>=7.1.1",
    "transformers>=4.56.0",
    "vllm>=0.7.3",
]

[tool.uv]
extra-index-url = ["https://wheels.vllm.ai/"]

[tool.pytest.ini_options]
pythonpath = ["."]
